# robot_arm

./: CMakeLists.txt  package.xml
config/: joint_group_position_controller.yaml  joint_group_trajectory_controller.yaml  joint_group_velocity_controller.yaml
launch/: display.launch.py  gazebo.launch.py  jgp_controller.launch.py  jgt_controller.launch.py  rs_publisher.launch.py  vel_controller.launch.py
meshes/: ante_brazo_link.STL  hombro_link.STL  muneca_link.STL
scripts/: interpolation_publisher_in_gazebo.py  trajectory_publisher.py  velocity_publisher.py
urdf/: position.xacro  robot_arm.csv  robot_arm.urdf.xacro  robot_arm_core.xacro
